# yaycache

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  .markdownlint-cli2.yaml  AUTHORS.md  CHANGES.md  CLAUDE.md  Makefile.am  PKGBUILD  README.md  autogen.sh  configure.ac  docs.sh
completions/: Makefile.am
completions/zsh/: _pacdiff  _rankmirrors  _yaycache
doc/: .gitignore  Makefile.am  asciidoc.conf  checkupdates.8.adoc  checkupdates.8.txt  contributing.adoc  contributing.txt  footer.adoc  footer.txt  paccache.8.adoc  paccache.8.txt  pacdiff.8.adoc  pacdiff.8.txt  paclist.8.adoc  paclog-pkglist.8.adoc  pacscripts.8.adoc  pacsearch.8.adoc  pacsort.8.adoc  pacsort.8.txt  pactree.8.adoc  pactree.8.txt  rankmirrors.8.adoc  release-procedure.adoc  release-procedure.txt  submitting-patches.txt  updpkgsums.8.adoc  updpkgsums.8.txt  yaycache.8.adoc
docs/: CNAME  index.html  yaycache.8.html
lib/: Makefile.am  size_to_human.sh  term_colors.sh
src/: .gitignore  Makefile.am  checkupdates.sh.in  paccache.service.in  paccache.sh.in  pacdiff.sh.in  paclist.sh.in  paclog-pkglist.sh.in  pacman-filesdb-refresh.service.in  pacman-syncdb.service.in  pacman-syncdb.timer  pacscripts.sh.in  pacsearch.pl.in  pacsort.c  pactree.c  rankmirrors.sh.in  updpkgsums.sh.in  yaycache.service.in  yaycache.sh.in
src/vim/ftplugin/: PKGBUILD.vim  SRCINFO.vim
src/vim/indent/: PKGBUILD.vim
src/vim/syntax/: PKGBUILD.vim
test/: .gitignore  Makefile.am  pacsorttest.sh  tap.sh
tests/: Makefile.am  common.bash
tests/integration/: cli_args.bats  dryrun.bats  keep_count.bats  min_atime_mtime.bats  move.bats  remove.bats  remove_build_files.bats  whitelist_blacklist.bats
tests/unit/: bffilter.bats  pkgfilter.bats  size_to_human.bats
