
zshcompletiondir = ${datadir}/zsh/site-functions/

zshcompletion_dir = ${zshcompletiondir}
zshcompletion__DATA = \
	zsh/_checkupdates \
	zsh/_paccache \
	zsh/_pacdiff \
	zsh/_paclist \
	zsh/_paclog-pkglist \
	zsh/_pacscripts \
	zsh/_pacsearch \
	zsh/_pacsort \
	zsh/_pactree \
	zsh/_rankmirrors \
	zsh/_updpkgsums
